--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,7 +3,7 @@
 - name: Check OS
   ansible.builtin.fail:
     msg: "distro {{ ansible_facts['distribution'] }} not supported"
-  when: ansible_facts['distribution'] != 'Ubuntu' and ansible_os_family != 'RedHat'
+  when: ansible_facts['distribution'] != 'Ubuntu' and ansible_facts['distribution'] != 'Debian' and ansible_os_family != 'RedHat'
 
 - name: Check if GPU is used
   ansible.builtin.set_fact:
@@ -11,31 +11,9 @@
     use_gpu: yes
   when: ((jupyter_use_gpu | bool) or (jupyterlab_collaborative_use_gpu | bool))
 
-# ---------- Update Ubuntu ----------
-- name: Update [Ubuntu]
-  ansible.builtin.apt:
-    update_cache: yes
-    upgrade: yes
-    autoclean: yes
-    autoremove: yes
-  when: ansible_facts['distribution'] == 'Ubuntu'
-
 # ---------- Docker ----------
-- name: Install docker [Ubuntu]
-  ansible.builtin.include_tasks: Ubuntu-docker.yml
-  when: (install_docker | bool) and ansible_facts['distribution'] == "Ubuntu"
-
-- name: Start and enable docker service
-  ansible.builtin.systemd:
-    name: docker
-    state: started
-    enabled: yes
-
-# ---------- Docker compose ----------
-- name: Install docker compose [Ubuntu]
-  ansible.builtin.include_tasks: Ubuntu-docker-compose.yml
-  when: (install_docker_compose | bool) and ansible_facts['distribution'] == "Ubuntu"
-
+- name: Install Docker
+  ansible.builtin.include_tasks: docker.yml
 
 # ---------- GPU support ----------
 - name: Add GPU support
